# paperhound

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: DEVELOPMENT.md  PYTHON.md  SMOKE_REPORT_0.3.0.md  TESTING.md
skills/paperhound/: SKILL.md
skills/paperhound/reference/: commands.md  json-schema.md  troubleshooting.md  workflows.md
src/paperhound/: __init__.py  __main__.py  citation_export.py  citations.py  cli.py  convert.py  download.py  errors.py  filtering.py  identifiers.py  library.py  mcp_server.py  models.py  output.py  rerank.py
src/paperhound/citation_export/: __init__.py  _common.py  bibtex.py  csl.py  ris.py
src/paperhound/citations/: __init__.py  _base.py  _dedup.py  _openalex.py  _semantic_scholar.py  _traversal.py
src/paperhound/cli/: __init__.py  _help.py  _logging.py
src/paperhound/cli/_commands/: __init__.py  citations.py  convert.py  download.py  get.py  library.py  providers.py  search.py  show.py
src/paperhound/search/: __init__.py  _pubtype.py  aggregator.py  arxiv_provider.py  base.py  core.py  crossref.py  dblp.py  huggingface.py  info.py  openalex.py  paperswithcode.py  registry.py  semantic_scholar.py
tests/integration/: test_arxiv_live.py  test_crossref_live.py  test_dblp_live.py  test_huggingface_live.py  test_openalex_live.py  test_semantic_scholar_live.py
tests/unit/: test_aggregator.py  test_arxiv_provider.py  test_citation_export.py  test_citations.py  test_cli.py  test_convert.py  test_core_provider.py  test_crossref.py  test_dblp.py  test_download.py  test_filtering.py  test_huggingface.py  test_identifiers.py  test_library.py  test_mcp_server.py  test_models.py  test_openalex.py  test_output.py  test_paperswithcode.py  test_provider_info.py  test_pubtype.py  test_rerank.py  test_semantic_scholar.py
web/: README.md  index.html  styles.css
