[project]
name = "paperhound"
version = "0.5.4"
description = "CLI to search, download, and convert academic papers (arXiv, OpenAlex, DBLP, Crossref, Hugging Face Papers, Semantic Scholar, CORE) into Markdown — built for AI/ML researchers."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Alejandro Fernández Camello", email = "alejandrofernandezcamello@gmail.com" },
]
keywords = [
    "arxiv",
    "semantic-scholar",
    "papers",
    "research",
    "cli",
    "docling",
    "markdown",
    "academic",
    "machine-learning",
    "phd",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "arxiv>=2.1.3",
    "docling>=2.0.0",
    "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/alexfdez1010/paperhound"
Repository = "https://github.com/alexfdez1010/paperhound"
Issues = "https://github.com/alexfdez1010/paperhound/issues"

[project.scripts]
paperhound = "paperhound.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]
rerank = ["sentence-transformers>=2.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperhound"]

[tool.hatch.build.targets.sdist]
include = ["src/paperhound", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "integration: tests that hit live APIs (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# Typer relies on typer.Argument()/typer.Option() in defaults; that is the
# documented API, not a bug.
extend-immutable-calls = [
    "typer.Argument",
    "typer.Option",
]
